--- a/style-stdclock.css
+++ b/style-stdclock.css
@@ -9,9 +9,8 @@ body {
 }
 
 .slider {
-    display: grid;
     font-family: "Lobster", "Times New Roman";
-
+    padding-left: 5px;
 }
 
 .main h1 {
@@ -23,10 +22,11 @@ body {
 }
 
 .menu {
-    /*display: none;*/
+    display: none;
     overflow: hidden;
 }
 
 .arrow {
     cursor: pointer;
+    margin-bottom: 0px;
 }
