--- a/CSS/style.css
+++ b/CSS/style.css
@@ -33,6 +33,7 @@ body {
     display: none;
     overflow: hidden;
     position: absolute;
+    z-index: 2;
 }
 
 .menu a {
@@ -68,4 +69,17 @@ body {
 
 .hidden {
     display: none;
+}
+
+.main h1 {
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    top: 190px;    
+}
+
+.laps {
+    text-align: center;
 }
