--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,4 @@
-﻿
-body {
+﻿body {
     background-color: darkred;
 }
 
@@ -8,14 +7,21 @@ body {
     margin-top: 200px;
 }
 
+.main h1 {
+    font-family: "Lobster", "Times New Roman";
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    top: 190px;
+}
+
 .slider {
     font-family: "Lobster", "Times New Roman";
     padding-left: 5px;
 }
 
-.main h1 {
-    font-family: "Lobster", "Times New Roman";
-}
 
 .clockface {
     font-family: "Bungee Inline", "Times New Roman";
@@ -23,12 +29,22 @@ body {
 
 .timerface {
     font-family: "Bungee Inline", "Times New Roman";
+    margin: 5px;
 }
 
 .datedisplay {
     font-family: "Bungee Inline", "Times New Roman";
 }
 
+.laps {
+    font-family: "Bungee Inline", "Times New Roman";
+    font-size: 14px;
+    text-align: center;
+}
+
+.laps h2 {
+    margin: 2px;
+}
 .menu {
     display: none;
     overflow: hidden;
@@ -47,12 +63,18 @@ body {
 }
 
 .button {
+    font-family: "Poppins", "Times New Roman";
     cursor: pointer;
     display: inline;
     background-color: black;
     color: white;
     padding: 10px;
     border: 1px solid black;
+    moz-user-select: -moz-none;
+    khtml-user-select: none;
+    webkit-user-select: none;
+    ms-user-select: none;
+    user-select: none;
 }
 
 .buttonOver {
@@ -67,10 +89,6 @@ body {
     padding-bottom: 40px;
 }
 
-.buttonArrow h2{
-    margin: 5px;
-}
-
 .stopwatch-ctrl {
     display: grid;
     grid-template-columns: 10% 10%;
@@ -83,15 +101,13 @@ body {
     display: none;
 }
 
-.main h1 {
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    top: 190px;    
+
+.message {
+    text-align: center;
+    font-family: "Lobster", "Times New Roman";
 }
 
-.laps {
-    text-align: center;
+#reset {
+    display: none;
+    margin-top: 40px;
 }
